feat(likes and favourites): add photo likes, favorites, and owner interaction stats
